--- a/src/components/Modals/modals/Promote/styles.module.scss
+++ b/src/components/Modals/modals/Promote/styles.module.scss
@@ -1,49 +1,61 @@
 @import '/src/styles/helpers';
 
-.wrapper{
-    max-width: 1080px;
+.wrapper {
+  max-width: 1080px;
 }
 
-.heading{
-    @include flex(row, center, center);
-    &Title{
-        margin-left: space(8);
-    }
+.heading {
+  @include flex(row, center, center);
+  &Title {
+    margin-left: space(8);
+  }
 }
 
-.selectPromotion{
-    margin: space(23) auto;
-    max-width: 420px;
-    @include flex(column, center, flex-start);
-    &Selector{
-        max-width: 365px;
-    }
-    &Description{
-        margin-top: space(23);
-    }
+.selectPromotion {
+  margin: space(23) auto;
+  max-width: 420px;
+  @include flex(column, center, flex-start);
+  &Selector {
+    max-width: 365px;
+  }
+  &Description {
+    margin-top: space(23);
+  }
 }
 
-.promotionPlans{
-    width: 100%;
-    @include flex(row, center, center, wrap);
-    &Item{
-        flex: 0 0 33.333%;
-        padding: space(12);
-    }
+.promotionPlans {
+  width: 100%;
+  @include flex(row, center, center, wrap);
+  &Item {
+    flex: 0 0 33.333%;
+    padding: space(12);
+  }
 }
 
-@include large-tablet{
-    .promotionPlans{
-        &Item{
-            flex: 0 0 50%;
-        }
+@include large-tablet {
+  .promotionPlans {
+    &Item {
+      flex: 0 0 50%;
     }
+  }
 }
 
-@include middle-tablet{
-    .promotionPlans{
-        &Item{
-            flex: 0 0 100%;
-        }
+@include middle-tablet {
+  .modal {
+    padding: 0;
+  }
+
+  .close {
+    top: 20px;
+    right: 20px;
+  }
+
+  .wrapper {
+    border-radius: 0;
+  }
+  .promotionPlans {
+    &Item {
+      flex: 0 0 100%;
     }
+  }
 }
