--- a/src/assets/styles/component-variables/_input.scss
+++ b/src/assets/styles/component-variables/_input.scss
@@ -50,34 +50,34 @@ $inputColorsDefault: (
   'input-success-icon': currentColor,
 );
 
-$inputColorsLight: (
-  'input-default-background': $light-8,
-  'input-default-label': $metal-700,
-  'input-default-color': $light-3,
+$inputColorsDark: (
+  'input-default-background': $dark-2,
+  'input-default-label': $dark-7,
+  'input-default-color': $dark-5,
   'input-default-caret': currentColor,
-  'input-default-border': $light-5,
+  'input-default-border': $dark-3,
   'input-default-width': 1px,
   'input-default-icon': currentColor,
 
-  'input-hover-background': $light-8,
-  'input-hover-label':  $metal-700,
-  'input-hover-color': $light-2,
+  'input-hover-background': $dark-2,
+  'input-hover-label':  $dark-7,
+  'input-hover-color': $dark-7,
   'input-hover-caret': currentColor,
-  'input-hover-border': $light-3,
+  'input-hover-border': $dark-5,
   'input-hover-width': 1px,
   'input-hover-icon': currentColor,
 
-  'input-focus-background': $light-8,
-  'input-focus-label': $metal-700,
-  'input-focus-color': $light-2,
+  'input-focus-background': $dark-2,
+  'input-focus-label': $dark-7,
+  'input-focus-color': $dark-7,
   'input-focus-border': $accent,
   'input-focus-caret': $accent,
   'input-focus-width': 2px,
   'input-focus-icon': $accent,
 
-  'input-disabled-background': $light-8,
-  'input-disabled-label': $metal-700,
-  'input-disabled-color': $light-3,
+  'input-disabled-background': $dark-2,
+  'input-disabled-label': $dark-7,
+  'input-disabled-color': $dark-5,
   'input-disabled-caret': currentColor,
   'input-disabled-border': $light-5,
   'input-disabled-width': 1px,
