--- a/src/assets/styles/component-variables/_main.scss
+++ b/src/assets/styles/component-variables/_main.scss
@@ -4,6 +4,6 @@ $mainColorsDefault: (
   "default-background": #F3F3F5,
 );
 
-$mainColorsLight: (
-  "default-background": $main-background,
+$mainColorsDark: (
+  "default-background": $bg-dark,
 );
