--- a/src/components/Dropdown/styles.scss
+++ b/src/components/Dropdown/styles.scss
@@ -308,6 +308,9 @@
         overflow: hidden;
       }
     }
+    .dropdown-head-icon-triangle {
+      color: var(--dropdown-head-icon-triangle);
+    }
   }
 }
 .head {
