main page finally

--- a/src/assets/styles/_color-themes.scss
+++ b/src/assets/styles/_color-themes.scss
@@ -100,6 +100,11 @@
 		$searchItemColorsDark,
 		$logoColorsDark,
 		$buttonColorsDark,
+		$swiperColorsDark,
+		$userPopoverColorsDark,
+		$clipboardColorsDark,
+		$switchColorsDark,
+		$collectionCardColorsDark,
 	);
 
 	@each $key_name in $colors {
