--- a/src/components/Clipboard/styles.module.scss
+++ b/src/components/Clipboard/styles.module.scss
@@ -42,6 +42,9 @@
     .clipboard-icon {
       width: 16px !important;
       height: 16px !important;
+      path {
+        fill: var(--clipboard-default-color) !important;
+      }
     }
   }
 }
