--- a/src/pages/Home/components/Featured/styles.module.scss
+++ b/src/pages/Home/components/Featured/styles.module.scss
@@ -40,7 +40,7 @@
       margin-left: 24px !important;
     }
   }
-  .card{
+  .card {
   }
 }
 
@@ -58,11 +58,16 @@
 }
 .swiper-button-prev {
   left: -64px;
-  background: url('../../../../assets/img/icons/arrowLeft.svg');
+}
+.swiper-button-prev-icon, .swiper-button-next-icon{
+  width: 9px;
+  height: 14px;
+  path {
+    color: var(--swiper-arrow-color)
+  }
 }
 .swiper-button-next {
   right: -64px;
-  background: url('../../../../assets/img/icons/arrowRight.svg');
 }
 .swiper-button-prev,
 .swiper-button-next {
@@ -85,16 +90,16 @@
     bottom: 0;
   }
 }
-.bullets{
+.bullets {
   display: none;
 }
-.swiper-pagination-bullet{
+.swiper-pagination-bullet {
   width: 40px;
   height: 6px;
   border-radius: 20px;
   background-color: var(--swiper-bullet-background);
   opacity: 1;
-  &.active{
+  &.active {
     background-color: var(--swiper-bullet-background-active);
   }
 }
@@ -105,7 +110,7 @@
   .swiper-button-next {
     display: none;
   }
-  .bullets{
+  .bullets {
     position: absolute;
     bottom: -25px !important;
     @include flex(row, center, center);
@@ -118,8 +123,8 @@
   }
 }
 @include large-mobile {
-  .wrapper{
-    .notableDrops{
+  .wrapper {
+    .notableDrops {
       margin-top: 0;
     }
   }
