--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -70,6 +70,7 @@ $dark-0: #1C1C28;
 $dark-1: #344256;
 $dark-2: #323235;
 $dark-3: #52525A;
+$dark-4: #717179;
 $dark-5: #A1A1A9;
 $dark-7: #F4F4F5;
 $dark-8: #F8F8FA;
