--- a/src/assets/styles/component-variables/_user-popover.scss
+++ b/src/assets/styles/component-variables/_user-popover.scss
@@ -15,5 +15,21 @@ $userPopoverColorsDefault:(
   'userPopover-auction-position': 28px,
   'userPopover-auction-background-color': $accent,
   'userPopover-auction-block-width': 90px,
+);
 
+$userPopoverColorsDark:(
+  'userPopover-default-background-color': $dark-0,
+  'userPopover-default-border-radius': 14px,
+  'userPopover-default-min-width': 338px,
+  'userPopover-edit-background-color': $dark-3,
+  'userPopover-edit-border-radius': 10px,
+  'userPopover-edit-icon-hover': $accent-2,
+  'userPopover-link-icon-avctive': $accent,
+
+  'userPopover-default-border-color': $card-border,
+  'userPopover-border-width': 1px,
+  'userPopover-border-radius': 20px,
+  'userPopover-auction-position': 28px,
+  'userPopover-auction-background-color': $accent,
+  'userPopover-auction-block-width': 90px,
 )
