--- a/src/components/CollectionCard/styles.module.scss
+++ b/src/components/CollectionCard/styles.module.scss
@@ -6,6 +6,7 @@
   @include flex(row, center, flex-start);
   padding: 18px 24px;
   background-color: var(--collectionCard-default-background);
+  border: var(--collectionCard-default-border);
   max-width: 360px;
   width: 100%;
   max-height: 94px;
