--- a/src/assets/styles/component-variables/_button.scss
+++ b/src/assets/styles/component-variables/_button.scss
@@ -299,7 +299,7 @@ $buttonColorsDark: (
   //background
   'button-filled-primary-background': $dark-5,
   'button-filled-primary-hover-background': $dark-5,
-  'button-filled-primary-active-background': $dark-5,
+  'button-filled-primary-active-background': $accent,
   'button-filled-primary-focus-background': $dark-5,
   'button-filled-primary-disabled-background': $dark-5,
   //border
