--- a/src/components/Breadcrumbs/styles.scss
+++ b/src/components/Breadcrumbs/styles.scss
@@ -11,6 +11,11 @@
   }
   .breadcrumb{
     @include flex(row, center, flex-start);
+    &-home {
+      path{
+        color: var(--breadcrumbs-text-color-default);
+      }
+    }
     &-breaker{
       transform: rotate(-90deg),
     }
