--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -24,16 +24,16 @@ $typographyColorsDefault: (
 );
 
 $typographyColorsDark: (
-  "typography-default-color": $metal-500,
-  "typography-secondary-color": $metal-500,
+  "typography-default-color": $dark-8,
+  "typography-secondary-color": $dark-8,
   "typography-error-color": $red,
   "typography-gray-6-color": $gray-6,
   "typography-dark-color": $dark-8,
-  "typography-dark-0-color": $dark-8,
+  "typography-dark-0-color": $dark-7,
   "typography-dark-1-color": $dark-5,
   "typography-accent-color": $accent,
   "typography-light-color": $light-white,
-  "typography-light-1-color": $light-1,
+  "typography-light-1-color": $dark-7,
   "typography-light-3-color": $dark-5,
   "typography-light-4-color": $light-4,
   "typography-iris-100-color": $iris-100,
