--- a/src/components/ArtCardSkeleton/styles.module.scss
+++ b/src/components/ArtCardSkeleton/styles.module.scss
@@ -2,6 +2,11 @@
 @import '../../assets/styles/mixins';
 @import 'src/styles/helpers';
 
-.skeleton { 
+.skeleton {
   border-radius: 30px !important;
+
+  background-color: var(--skeleton-default-background-color) !important;
+  &::after {
+    background-image: var(--skeleton-default-after-color) !important;
+  }
 }
