--- a/src/components/CheckboxButton/styles.module.scss
+++ b/src/components/CheckboxButton/styles.module.scss
@@ -18,7 +18,7 @@
   }
   &.active {
     background: var(--checkboxButton-active-background-color);
-    background: var(--checkboxButton-active-border-color);
+    border-color: var(--checkboxButton-active-border-color);
 
     outline: none;
     -webkit-touch-callout: none; /* iOS Safari */
