--- a/src/assets/styles/component-variables/_dropdown.scss
+++ b/src/assets/styles/component-variables/_dropdown.scss
@@ -149,7 +149,7 @@ $dropdownColorsDark: (
     "dropdown-outlined-focus-head-color": $dark-5,
     "dropdown-outlined-disabled-head-color": $dark-5,
 
-    "dropdown-outlined-default-body-main-background": $bg-dark,
+    "dropdown-outlined-default-body-main-background": $dark,
 
     "dropdown-outlined-default-body-background": transparent,
     "dropdown-outlined-hover-body-background": transparent,
