--- a/src/pages/CreateForm/Form/components/Properties/styles.module.scss
+++ b/src/pages/CreateForm/Form/components/Properties/styles.module.scss
@@ -21,6 +21,7 @@
 .single-prop__body {
   padding: space(24);
   background: var(--property-block-background);
+  border: var(--property-block-border);
   border-radius: 20px;
   width: 100%;
   position: relative;
