--- a/src/assets/styles/component-variables/_avatar-uploader.scss
+++ b/src/assets/styles/component-variables/_avatar-uploader.scss
@@ -10,12 +10,12 @@ $avatarUploaderColorsDefault: (
   'avatarUploader-icon-color': #231F20,
 );
 
-$avatarUploaderColorsLight: (
-  'avatarUploader-border': 1px dashed $base-400,
-  'avatarUploader-hover-border': 1px solid $base-400,
-  'avatarUploader-background': $light-8,
-  'avatarUploader-hover-background': rgba($light-8, 0.6),
+$avatarUploaderColorsDark: (
+  'avatarUploader-border': 1px dashed $accent,
+  'avatarUploader-hover-border': 1px solid $accent,
+  'avatarUploader-background': $dark,
+  'avatarUploader-hover-background': rgba($dark, 0.6),
   'avatarUploader-error-border': 1px dashed $red,
   'avatarUploader-error-background': rgba($red, 0.05),
-  'avatarUploader-icon-color': #231F20,
+  'avatarUploader-icon-color': $dark-8,
 );
