--- a/src/assets/styles/component-variables/_button.scss
+++ b/src/assets/styles/component-variables/_button.scss
@@ -376,11 +376,11 @@ $buttonColorsDark: (
   'button-filled-tertiary-disabled-border': transparent,
   'button-filled-tertiary-disabled-border-width': 2px,
   //color
-  'button-filled-tertiary-color': $metal-700,
+  'button-filled-tertiary-color': $accent-100,
   'button-filled-tertiary-hover-color': $accent,
   'button-filled-tertiary-active-color': $accent,
   'button-filled-tertiary-focus-color': $accent,
-  'button-filled-tertiary-disabled-color': $metal-700,
+  'button-filled-tertiary-disabled-color': $accent-100,
   //icon
   'button-filled-tertiary-icon-color': currentColor,
   'button-filled-tertiary-hover-icon-color': currentColor,
