--- a/src/assets/styles/component-variables/_typography.scss
+++ b/src/assets/styles/component-variables/_typography.scss
@@ -39,9 +39,9 @@ $typographyColorsDark: (
   "typography-iris-100-color": $iris-100,
   "typography-metal-50-color": $metal-50,
   "typography-metal-400-color": $dark-7,
-  "typography-metal-600-color": $metal-600,
-  "typography-metal-700-color": $dark-5,
+  "typography-metal-600-color": $dark-5,
+  "typography-metal-700-color": $accent-100,
   "typography-metal-800-color": $dark-8,
-  "typography-base-900-color": $base-900,
+  "typography-base-900-color": $dark-8,
   "typography-yellow-500-color": $yellow-500,
 );
