--- a/src/pages/Explore/components/Body/styles.module.scss
+++ b/src/pages/Explore/components/Body/styles.module.scss
@@ -11,7 +11,7 @@
       background-color: var(--filters-button-background-color);
       display: none;
       .filtersIcon {
-        color: #384252;
+        color: var(--filters-button-icon-color);
         @include transition;
       }
       &:hover,
