--- a/src/assets/styles/component-variables/_title-dropdown.scss
+++ b/src/assets/styles/component-variables/_title-dropdown.scss
@@ -7,8 +7,8 @@ $titleDropdownColorsDefault: (
   
 );
 
-$titleDropdownColorsLight: (
-  "titleDropdown-default-background": $light-white,
+$titleDropdownColorsDark: (
+  "titleDropdown-default-background": $dark,
   "titleDropdown-default-option-hover": $accent-2,
   "titleDropdown-default-body-shadow": $shadow-2,
 );
