--- a/src/components/Input/styles.scss
+++ b/src/components/Input/styles.scss
@@ -249,6 +249,9 @@
       .input-endAdornment {
         flex: 0 0 1em;
         height: 1em;
+        img{
+          width: 100%;
+        }
         svg {
           width: 100%;
           height: 100%;
