fix color sheme

--- a/src/assets/styles/_color-themes.scss
+++ b/src/assets/styles/_color-themes.scss
@@ -138,6 +138,9 @@
 		$nftpageColorsDark,
 		$selectorColorsDark,
 		$promoteCardColorsDark,
+		$promotionStatusBarColorsDark,
+		$connectModalColorsDark,
+		$highlightedTextColorsDark,
 	);
 
 	@each $key_name in $colors {
